src/web/src/Pages/NewChatPage/Components/ChatUi/ChatInput/ChatInputText.module.scss
.inputTextWrapper {
  display: flex;
  justify-content: center;
  padding: 0 10px;

  .inputForm {
    width: 96%;
    display: flex;
    flex-flow: row nowrap;

    .inputWrapper {
      flex: 1 1 auto;
      position: relative;
    }

    .sendIcon {
      position: absolute;
      right: 5px;
      bottom: 5px;
      width: 30px;
      height: 30px;
      cursor: pointer;

      &::after {
        position: absolute;
        top: 0;
        left: 0;
        width: 100%;
        height: 100%;
        background-color: rgba(255, 255, 255, 0.2);
      }
    }

    .subBtn {
      margin-left: 10px;
      width: 100px;
    }

    .inputField {
      display: block;
      font-size: var(--font-size-3);
      padding: 8px 36px 8px 16px;
      color: var(--font-color-main);
      border-radius: 20px;

      &:focus {
        border: 1px solid var(--color-1);
      }
    }
  }
}

